# backend/src/models/api/LoggedInUser.ts
@@ -1,4 +1,0 @@
-export interface LoggedInUser {
-  id: number;
-  profilePictureUrl: string;
-}
