# backend/src/models/business/User.ts
@@ -1,4 +1,5 @@
 import { Language } from '@/models/business/Language';
+import { Partner } from '@/models/business/Partner';
 
 export interface LoggedInUser {
   id: number;
@@ -8,15 +9,14 @@ export interface LoggedInUser {
 export interface User extends LoggedInUser {
   firstName: string;
   lastName?: string;
-  fullName: string;
   email: string;
-  position?: string;
+  position: string;
   birthday?: string;
   isBirthday: boolean;
 }
 
 export interface WithInfo {
-  partner?: string;
+  partner?: Partner;
   office: string;
 }
 
