# backend/src/models/service/database/UserRecord.ts
@@ -1,3 +1,5 @@
+import { WithOfficeRecord } from '@/models/service/database/OfficeRecord';
+import { WithPartnerRecord } from '@/models/service/database/PartnerRecord';
 import { Identifiable } from '@/models/service/database/Record';
 import { Knex } from 'knex';
 
@@ -11,17 +13,13 @@ export interface UserRecord extends LoggedInUserRecord {
   email: string;
   office_id: number;
   partner_id?: number;
-  position?: string;
+  position: string;
   birthday?: string;
 }
 
-export interface WithPartner {
-  partner_name?: string;
-}
-
-export interface WithOffice {
-  office_name: string;
-}
+export type UserProfileQueryRecord = UserRecord &
+  Partial<WithPartnerRecord> &
+  WithOfficeRecord;
 
 declare module 'knex/types/tables' {
   interface Tables {
